# hyperbuild

./: BUILD_INTEGRATION.md  CONFIG_EXAMPLES.md  Containerfile  ESSENTIAL_TODO.txt  TODO.txt  docker-compose.yml  test_integration.sh  todo.txt
rust-container-builder/: Cargo.toml  Dockerfile  README.md
rust-container-builder/build-output/images/image_5136caa6-0568-4cbf-b68a-6065559bfd05/: config.json  name.txt
rust-container-builder/build-output/images/image_c71273c6-8a77-4408-9cd1-ce12b456ce6b/: manifest.json
rust-container-builder/src/: lib.rs  main.rs  registry_client.rs
rust-container-builder/src/dockerfile/: mod.rs
rust-container-builder/src/engine/: mod.rs
rust-container-builder/src/storage/: mod.rs
rust-container-builder/test-output/images/image_d62e03ec-419b-40b9-8739-af797f8b33b5/: name.txt
test-dockerfile/: Dockerfile
