[package]
name = "rust-container-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
oci-spec = "0.8"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tar = "0.4"
flate2 = "1.0"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
